# Buntan

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  a.out  autorun.py  build.ys  buildcounter_4b.json  collection.py  frontend.cpp  iscas.py  main.cpp  nodetypes.cpp  nodetypes.hpp  plot.py  plot_csv.py  run_examples.py  yosys_benchmarks.py  yosys_json_examples.py
examples/: FA.json  FA.v  FF_ex.json  FF_ex.v  adder_4b.json  adder_4b.v  basic_gates.v  basic_gates.v.modified  build.ys  c1355.json  c17.json  c1908.json  c1908a.json  c2670.json  c2670a.json  c3540.json  c3540a.json  c3540a.v  c432.json  c499.json  c5315.json  c5315a.json  c5315a.v  c6288.json  c7552.json  c880.v  c880g.json  c880g.v  circuit.json  counter_4b.v  inv_test.json  inv_test.v  s1196.v  s1196a.v  s1196b.v  s1238.v  s1238a.v  s13207.v  s13207a.v  s1423.v  (+33 more)
examples/iscas85/: c1355.v  c1908a.v  c2670a.v
examples/iscas89/: s1196a.v.modified  s1238a.v.modified  s13207.v.modified  s13207a.v.modified  s1488.v.modified  s27.v.modified  s298.v.modified  s344.v.modified  s349.v.modified  s35932.v.modified  s382.v.modified  s38417.v.modified  s38584.v.modified  s386.v.modified  s400.v.modified  s420.v.modified  s444.v.modified  s510.v.modified  s526.v.modified  s526a.v.modified  s5378a.v.modified  s641.v.modified  s713.v.modified  s820a.v.modified  s832a.v.modified  s838.v.modified  s9234a.v.modified  s953a.v.modified
include/: backend.hpp  frontend.hpp  nodetypes.hpp
lib/: CMakeLists.txt  nodetypes.cpp  nodetypes.cpp.orig  nodetypes.cpp.save  utils_wrap.cpp
src/: CMakeLists.txt  backend.cpp  backend_mpi.cpp  check_and.cpp  client.cpp  client_manual.cpp  dump.cpp  frontend.cpp  main.cpp  nodetypes.cpp  runtime_mpi.cpp  runtime_ms.cpp  runtime_ms.cpp.orig  runtime_unode.cpp  starpu_mpi_test.cpp  utils.cpp  verify.cpp
